# Seraph.AI

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml
src/: Hooks.cpp
